kubernetes/docspell/kustomize/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docspell-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: docspell.127.0.0.1.sslip.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: restserver
              port:
                name: http
        - path: /restserver(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: restserver
              port:
                name: http
        - path: /joex(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: joex
              port:
                name: http
        - path: /solr(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: solr
              port:
                name: solr
  tls: []
