kubernetes/docspell/kustomize/base/netpol.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-except-kube-dns
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-restserver
spec:
  podSelector:
    matchLabels:
      app: restserver
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app: traefik
        - podSelector:
            matchLabels:
              app: solr
      ports:
        - port: 7880
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: solr
      ports:
        - port: 8983
    # mail fetch/send
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/20
      ports:
        # smtp
        - port: 25
        - port: 587
        - port: 465
        # pop3
        - port: 110
        - port: 995
        # imap
        - port: 143
        - port: 993
        # https for oidc
        - port: 443


---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-joex
spec:
  podSelector:
    matchLabels:
      app: joex
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app: traefik
        - podSelector:
            matchLabels:
              app: restserver
      ports:
        - port: 7878
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: solr
      ports:
        - port: 8983

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: restserver
        - podSelector:
            matchLabels:
              app: joex
      ports:
        - port: 5432

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-solr
spec:
  podSelector:
    matchLabels:
      app: solr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: restserver
        - podSelector:
            matchLabels:
              app: joex
      ports:
        - port: 8983
